[package]
name = "pyth-layout-bpf-test"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = "1.16.1"
pyth-sdk-solana = "0.10.1"
pyth_sdk_solana_0_9 = { package = "pyth-sdk-solana", version = "0.9.0" }
solana-nostd-entrypoint = "0.3.0"
solana-program = "=1.18.1"

[dev-dependencies]
solana-program-test = "1.18.1"
solana-sdk = "1.18.1"
tokio = { version = "1.38.0", features = ["full"] }
